<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/detail_user_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user_detail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/logo_image_detail_user"
        android:src="@drawable/person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_user_progress_bar" />

    <TextView
        android:id="@+id/tv_user_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_user_detail"
        app:layout_constraintStart_toStartOf="@+id/iv_user_detail"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_detail" />

    <TextView
        android:id="@+id/tv_user_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_user_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_detail_name" />

    <ImageView
        android:id="@+id/imageViewL"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/logo_image_user_followers"
        android:src="@drawable/people_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_detail_followers"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_detail_followers"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_user_detail_followers" />

    <TextView
        android:id="@+id/tv_user_detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/count"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout_user_detail"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_detail_username" />

    <TextView
        android:id="@+id/textViewL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textSize="14sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_detail_followers"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toEndOf="@+id/tv_user_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_user_detail_followers" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageViewR"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/logo_image_user_following"
        android:src="@drawable/people_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_detail_following"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_detail_following"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tv_user_detail_following" />

    <TextView
        android:id="@+id/tv_user_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/count"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout_user_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_detail_username" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textSize="14sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_detail_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toEndOf="@+id/tv_user_detail_following"
        app:layout_constraintTop_toTopOf="@+id/tv_user_detail_following" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_user_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_detail_username"
        app:tabGravity="fill"
        app:tabMode="fixed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_user_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_user_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>